tests/paczka1/small_fuzzy/53380599.err
Error in line 9: A386 A807 94,5
Error in line 10: A386 A761 35,7
